--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.14.3",
     "marimo>=0.18.4",
+    "pandas>=2.3.3",
+    "requests>=2.32.5",
 ]
