--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "marimo>=0.18.4",
     "pandas>=2.3.3",
+    "polars>=1.36.1",
     "requests>=2.32.5",
 ]
