normalement le requirement est bn

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,16 @@ streamlit
 scikit-learn
 pandas
 polars
-seaborn
 matplotlib
 requests
-beautifulsoup4
 joblib
-pyarrow
-plotly.express
-streamlit_extras.metric_cards
+plotly
+xgboost
+lazypredict
+
+
+
+
+
+
+
